
SUBDIRS = pixmaps plugin_about plugin_entities plugin_htmlbar plugin_snippets

MAINTAINERCLEANFILES = Makefile.in config.h.in

DEFS += -DLOCALEDIR=\"$(localedir)\" -DPKGDATADIR=\"$(pkgdatadir)\" -DPKGLIBDIR=\"$(pkglibdir)\"

bin_PROGRAMS = bluefish-unstable

bluefish_unstable_SOURCES = \
	autocomp.c \
	autocomp.h \
	bf_lib.c \
	bf_lib.h \
	bfspell.c \
	bfspell.h \
	bf-textview.c \
	bf-textview.h \
	bluefish.c \
	bluefish.h \
	bookmark.c \
	bookmark.h \
	cap.c \
	cap.h \
	dialog_utils.c \
	dialog_utils.h \
	document.c \
	document.h \
	embed_python.c \
	embed_python.h \
	external_commands.c \
	external_commands.h \
	filebrowser2.c \
	filebrowser2.h \
	file.c \
	file.h \
	file_dialogs.c \
	file_dialogs.h \
	filefilter.c \
	filefilter.h \
	filetype.c \
	filetype.h \
	fref2.c \
	fref2.h \
	gtk_easy.c \
	gtk_easy.h \
	gui.c \
	gui.h \
	menu.c \
	menu.h \
	msg_queue.c \
	msg_queue.h \
	outputbox.c \
	outputbox.h \
	pixmap.c \
	pixmap.h \
	plugins.c \
	plugins.h \
	preferences.c \
	preferences.h \
	project.c \
	project.h \
	rcfile.c \
	rcfile.h \
	snr2.c \
	snr2.h \
	stringlist.c \
	stringlist.h \
	textstyle.c \
	textstyle.h \
	treetips.c \
	treetips.h \
	undo_redo.c \
	undo_redo.h

