
AUTOMAKE_OPTIONS = std-options

SUBDIRS = pixmaps plugin_about plugin_entities plugin_htmlbar plugin_infbrowser plugin_snippets

MAINTAINERCLEANFILES = Makefile.in config.h.in

DEFS += -DLOCALEDIR=\"$(localedir)\" -DPKGDATADIR=\"$(pkgdatadir)\" -DPKGLIBDIR=\"$(pkglibdir)\"

bin_PROGRAMS = bluefish-unstable

#
#
#	bftextview2.c \
#	bftextview2.h \
#	bftextview2_langmgr.c \
#	bftextview2_langmgr.h \
#	bftextview2_autocomp.c \
#	bftextview2_autocomp.h \
#	bftextview2_patcompile.c \
#	bftextview2_patcompile.h \
#	bftextview2_scanner.c \
#	bftextview2_scanner.h \
#
#

bluefish_unstable_SOURCES = \
	bf_lib.c \
	bf_lib.h \
	bfspell.c \
	bfspell.h \
	blocksync.c \
	blocksync.h \
	bluefish.c \
	bluefish.h \
	bftextview2.c \
	bftextview2.h \
	bftextview2_langmgr.c \
	bftextview2_langmgr.h \
	bftextview2_autocomp.c \
	bftextview2_autocomp.h \
	bftextview2_patcompile.c \
	bftextview2_patcompile.h \
	bftextview2_scanner.c \
	bftextview2_scanner.h \
	bookmark.c \
	bookmark.h \
	cap.c \
	cap.h \
	dialog_utils.c \
	dialog_utils.h \
	document.c \
	document.h \
	encodings_dialog.c \
	encodings_dialog.h \
	external_commands.c \
	external_commands.h \
	filebrowser2.c \
	filebrowser2.h \
	file.c \
	file.h \
	file_dialogs.c \
	file_dialogs.h \
	filefilter.c \
	filefilter.h \
	gtk_easy.c \
	gtk_easy.h \
	gui.c \
	gui.h \
	menu.c \
	menu.h \
	msg_queue.c \
	msg_queue.h \
	outputbox.c \
	outputbox.h \
	pixmap.c \
	pixmap.h \
	plugins.c \
	plugins.h \
	preferences.c \
	preferences.h \
	project.c \
	project.h \
	rcfile.c \
	rcfile.h \
	snr2.c \
	snr2.h \
	stringlist.c \
	stringlist.h \
	textstyle.c \
	textstyle.h \
	treetips.c \
	treetips.h \
	undo_redo.c \
	undo_redo.h
