EXTRA_DIST = \
	bluefish.nsi \
	config.nsis \
	Makefile.mingw.in \
	includes/Checksums.nsh \
	includes/Functions.nsh \
	includes/Macros.nsh \
	includes/UnFunctions.nsh \
	locale/Basque.nsh \
	locale/Catalan.nsh \
	locale/Czech.nsh \
	locale/Dutch.nsh \
	locale/English.nsh \
	locale/French.nsh \
	locale/Galician.nsh \
	locale/German.nsh \
	locale/Hungarian.nsh \
	locale/Italian.nsh \
	locale/Japanese.nsh \
	locale/NorwegianBokmaal.nsh \
	locale/NorwegianNynorsk.nsh \
	locale/PortugueseBR.nsh \
	locale/SimpChinese.nsh \
	locale/Swedish.nsh \
	locale/Ukrainian.nsh \
	pixmaps/bluefish-ada.ico \
	pixmaps/bluefish-asp.ico \
	pixmaps/bluefish-bflang2.ico \
	pixmaps/bluefish-bfproj.ico \
	pixmaps/bluefish-c.ico \
	pixmaps/bluefish-cpp.ico \
	pixmaps/bluefish-css.ico \
	pixmaps/bluefish-d.ico \
	pixmaps/bluefish-gettext.ico \
	pixmaps/bluefish-h.ico \
	pixmaps/bluefish-hpp.ico \
	pixmaps/bluefish-html.ico \
	pixmaps/bluefish-icon.ico \
	pixmaps/bluefish-java.ico \
	pixmaps/bluefish-js.ico \
	pixmaps/bluefish-jsp.ico \
	pixmaps/bluefish-nsh.ico \
	pixmaps/bluefish-nsi.ico \
	pixmaps/bluefish-perl.ico \
	pixmaps/bluefish-php.ico \
	pixmaps/bluefish-python.ico \
	pixmaps/bluefish-ruby.ico \
	pixmaps/bluefish-shell.ico \
	pixmaps/bluefish-smarty.ico \
	pixmaps/bluefish-text.ico \
	pixmaps/bluefish-vbscript.ico \
	pixmaps/bluefish-xhtml.ico \
	pixmaps/bluefish-xml.ico \
	pixmaps/bluefish-xslt.ico
